# Codex-Helm

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  first_start.rs  lib.rs  main.rs  models.rs  paths.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: auth.rs  config.rs  first_start.rs  mod.rs  monitor.rs  overview.rs  provider.rs
src-tauri/src/config/: mod.rs
src-tauri/src/monitor/: mod.rs
src-tauri/src/overview/: mod.rs
src-tauri/src/provider/: connectivity.rs  mod.rs
src-tauri/src/settings/: mod.rs
src/components/auth/: AuthSimpleModal.test.tsx  AuthSimpleModal.tsx
src/components/common/: EmptyStateCard.tsx  KeyValueMask.tsx  StatusCard.tsx
src/components/config/: ConfigForm.tsx
src/components/first-start/: FirstStartModal.test.tsx  FirstStartModal.tsx
src/components/layout/: SidebarNav.tsx  Topbar.tsx
src/components/provider/: ProviderForm.tsx
src/components/ui/: ActionMenu.tsx  (+7 more)
src/lib/: tauri.ts
src/pages/: Auth.test.tsx  Auth.tsx  Config.test.tsx  Config.tsx  Monitor.test.tsx  Monitor.tsx  Overview.test.tsx  Overview.tsx  PlaceholderPages.test.tsx  Provider.test.tsx  Provider.tsx  RunMode.tsx  Sessions.tsx
src/stores/: useAuthStore.ts  useConfigStore.ts  useFirstStartStore.ts  useMonitorStore.ts  useOverviewStore.ts  useProviderStore.ts  useUiStore.ts
src/types/: auth.ts  config.ts  firstStart.ts  monitor.ts  navigation.ts  overview.ts  provider.ts
